# subgraph-rust-setup-utils

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
docker/: docker-compose.yaml
src/: lib.rs
src/rpc/: mod.rs
src/wallets/: mod.rs
tests/: basic_test.rs  rpc.rs  wallets.rs
