[package]
name = "subgraph_rust_setup_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "subgraph_rust_setup_utils"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.70"
ethers = { version = "2.0", features = ["legacy"] }
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.28.0", features = ["full"] }